--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.2
   provider: ^4.3.1
+  url_launcher: ^5.5.0
+  share: ^0.6.4+3
 
 dev_dependencies:
   flutter_test:
