--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   provider: ^4.3.1
   url_launcher: ^5.5.0
   share: ^0.6.4+3
+  transparent_image: ^1.0.0
+  sqflite: ^1.3.1
+  path_provider: ^1.6.11
+  path: ^1.6.4
 
 dev_dependencies:
   flutter_test:
@@ -49,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
