--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   sqflite: ^1.3.1
   path_provider: ^1.6.11
   path: ^1.6.4
+  connectivity: ^0.4.9
 
 dev_dependencies:
   flutter_test:
